--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 <h1>隐私协议</h1>
 <p><strong>生效日期：</strong>2024年12月11日</p>
-<p>感谢您使用我们的屏幕测试应用程序（以下简称“应用”）。我们非常重视您的隐私和个人信息的保护。本隐私协议旨在帮助您了解我们如何收集、使用和保护您的个人信息。</p>
+<p>感谢您使用我们的本地屏幕检测应用程序（以下简称“应用”）。我们非常重视您的隐私和个人信息的保护。本隐私协议旨在帮助您了解我们如何收集、使用和保护您的个人信息。</p>
 
 <h2>1. 信息的收集</h2>
 <p>我们的应用在使用过程中不会主动收集或传输任何个人信息。本应用旨在帮助用户检测设备屏幕的状态和性能，所有操作均在本地设备上进行。</p>
@@ -48,6 +48,7 @@
 <h2>8. 联系我们</h2>
 <p>如果您对本隐私协议有任何疑问或建议，请通过以下方式联系我们：</p>
 <p>电子邮件：<a href="mailto:zzp19980703@gmail.com">zzp19980703@gmail.com</a></p>
+<p>联系人：<a href="javascript:;">郑志鹏</a></p>
 <p>我们感谢您对我们应用的信任与支持，并承诺持续为您提供安全、可靠的服务。</p>
 </body>
 </html>
